--- a/springBoot/spring-boot-shiro/pom.xml
+++ b/springBoot/spring-boot-shiro/pom.xml
@@ -13,7 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>1.7</java.version>
     </properties>
 
     <dependencies>
@@ -28,5 +28,76 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
+        <!-- shiro ehcache -->
+
+        <dependency>
+
+            <groupId>org.apache.shiro</groupId>
+
+            <artifactId>shiro-ehcache</artifactId>
+
+            <version>1.2.2</version>
+
+        </dependency>
+
+
+
+        <!--
+
+            包含支持UI模版（Velocity，FreeMarker，JasperReports），
+
+            邮件服务，
+
+            脚本服务(JRuby)，
+
+            缓存Cache（EHCache），
+
+            任务计划Scheduling（uartz）。
+
+         -->
+
+        <dependency>
+
+            <groupId>org.springframework</groupId>
+
+            <artifactId>spring-context-support</artifactId>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.springframework.boot</groupId>
+
+            <artifactId>spring-boot-devtools</artifactId>
+
+            <optional>true</optional>
+
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!--
+
+  用于将应用打成可直接运行的jar（该jar就是用于生产环境中的jar） 值得注意的是，如果没有引用spring-boot-starter-parent做parent，
+
+            且采用了上述的第二种方式，这里也要做出相应的改动
+
+  -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+
+                <artifactId>spring-boot-maven-plugin</artifactId>
+
+                <configuration>
+
+                    <!--fork :  如果没有该项配置，肯呢个devtools不会起作用，即应用不会restart -->
+
+                    <fork>true</fork>
+
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
