--- a/springBoot/pom.xml
+++ b/springBoot/pom.xml
@@ -18,6 +18,8 @@
         <module>spring-boot-ehcache</module>
         <module>spring-boot-shiro</module>
         <module>mybatis</module>
+        <module>mybatisXml</module>
+        <module>spring-data-jpa</module>
     </modules>
 
     <parent>
